# http-remote-input-controller

./: pyproject.toml
src/: main.py
src/services/: input_service.py  keyboard_service.py  mouse_service.py
